tests/test_files/invalid/syntax/instance_wrong_indentation.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Location warehouse1
        id: "0x4711"    
    type: "pallet"
End
